[tool.poetry]
name = "project-rcod"
version = "0.1.0"
description = ""
authors = ["lxRbckl <lxrbckl@gmail.com>"]
readme = "README.md"
packages = [{include = "project_rcod"}]

[tool.poetry.dependencies]
python = "^3.8"
lxrbckl = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
